--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"native-base": "^2.3.0",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.46.4",
+		"react-native-fcm": "^7.3.0",
 		"react-navigation": "^1.0.0-beta.11"
 	},
 	"devDependencies": {
