--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"axios": "^0.16.2",
 		"native-base": "^2.3.0",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.46.4",
+		"react-native-device-info": "^0.10.2",
 		"react-native-fcm": "^7.3.0",
 		"react-navigation": "^1.0.0-beta.11"
 	},
