--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react-native": "0.46.4",
     "react-native-device-info": "^0.10.2",
     "react-native-fcm": "^7.3.0",
-    "react-navigation": "^1.0.0-beta.11"
+    "react-navigation": "^1.0.0-beta.11",
+    "react-redux": "^5.0.5",
+    "redux-actions": "^2.2.1",
+    "redux-saga": "^0.15.6"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
