--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-fcm": "^7.3.0",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
+    "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-saga": "^0.15.6"
   },
