--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "eslint": "^4.3.0",
     "immutability-helper": "^2.3.0",
     "native-base": "^2.3.0",
     "react": "^16.0.0-alpha.12",
@@ -22,7 +23,7 @@
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
-    "babel-preset-react-native": "^2.0.0",
+    "babel-preset-react-native": "2.1.0",
     "eslint": "^4.3.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
