--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -99,6 +99,7 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
+	multiDexEnabled true
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -147,9 +148,30 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
-    compile project(':react-native-fcm')
-    compile 'com.google.firebase:firebase-core:10.0.1' //this decides your firebase SDK version
-    compile project(':react-native-device-info')
+    compile(project(':react-native-maps')){
+         exclude group: 'com.google.android.gms'
+     }
+     compile (project(':react-native-fcm')){
+         exclude group: "com.google.firebase"
+     }
+     compile (project(':react-native-device-info')){
+         exclude group: "com.google.android.gms"
+     }
+     compile ("com.google.android.gms:play-services-base:10.0.1") {
+      force = true;
+      }
+      compile ("com.google.android.gms:play-services-maps:10.0.1") {
+      force = true;
+      }
+      compile ("com.google.android.gms:play-services-gcm:10.0.1") {
+         force = true;
+     }
+     compile ('com.google.firebase:firebase-core:10.0.1') {
+        force = true;
+    }
+    compile ('com.google.firebase:firebase-messaging:10.0.1') {
+        force = true;
+    }
 }
 
 // Run this once to be able to run the application with BUCK
