--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <uses-sdk
         android:minSdkVersion="16"
@@ -23,6 +24,9 @@
         <action android:name="com.google.firebase.MESSAGING_EVENT"/>
       </intent-filter>
     </service>
+    <meta-data
+       android:name="com.google.android.geo.API_KEY"
+       android:value="AIzaSyBgp5Kbn36m2zq2r70Qe5RNR96lM7w9KKo"/>
 
     <service android:name="com.evollu.react.fcm.InstanceIdService" android:exported="false">
       <intent-filter>
