--- a/ios/HrRecruit/GoogleService-Info.plist
+++ b/ios/HrRecruit/GoogleService-Info.plist
@@ -17,7 +17,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.hrrecruit</string>
+	<string>com.excellence.jobs</string>
 	<key>PROJECT_ID</key>
 	<string>hrrecruit-8c1cc</string>
 	<key>STORAGE_BUCKET</key>
