--- a/ios/HrRecruit/HrRecruit.entitlements
+++ b/ios/HrRecruit/HrRecruit.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)com.hrrecruit</string>
+		<string>$(AppIdentifierPrefix)com.excellence.jobs</string>
 	</array>
 </dict>
 </plist>
