--- a/ios/HrRecruit/GoogleService-Info.plist
+++ b/ios/HrRecruit/GoogleService-Info.plist
@@ -7,21 +7,21 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>968117996720-m85fvssa2ajeta04ac7ptmu1l0fo0do3.apps.googleusercontent.com</string>
+	<string>47633179666-l8oi1ab01rdrg4gqta8nqsq37ho213qf.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.968117996720-m85fvssa2ajeta04ac7ptmu1l0fo0do3</string>
+	<string>com.googleusercontent.apps.47633179666-l8oi1ab01rdrg4gqta8nqsq37ho213qf</string>
 	<key>API_KEY</key>
-	<string>AIzaSyADZIP8oA9xxNj3PKBucXwxUZQqJpAjkN8</string>
+	<string>AIzaSyCNWq65Fmrl95f-S7ADumb7pwwlE91SFGk</string>
 	<key>GCM_SENDER_ID</key>
-	<string>968117996720</string>
+	<string>47633179666</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.excellence.jobs</string>
 	<key>PROJECT_ID</key>
-	<string>hrrecruit-8c1cc</string>
+	<string>excellene-jobs</string>
 	<key>STORAGE_BUCKET</key>
-	<string>hrrecruit-8c1cc.appspot.com</string>
+	<string>excellene-jobs.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<true/>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -33,8 +33,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:968117996720:ios:d39d42f0c47d6ff9</string>
+	<string>1:47633179666:ios:b589066be7304c61</string>
 	<key>DATABASE_URL</key>
-	<string>https://hrrecruit-8c1cc.firebaseio.com</string>
+	<string>https://excellene-jobs.firebaseio.com</string>
 </dict>
 </plist>
