--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         android:name=".MainActivity"
         android:label="@string/app_name"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+        android:launchMode="singleTask"
         android:windowSoftInputMode="adjustResize">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
@@ -46,20 +47,26 @@
       <action android:name="fcm.ACTION.HELLO" />
       <category android:name="android.intent.category.DEFAULT" />
     </intent-filter>
-      </activity>
-      <activity
-        android:name="com.yourapp.SplashActivity"
-        android:label="@string/app_name"
-        android:launchMode="singleTask">
-        <intent-filter>
-           <data android:scheme="excellencejobs" android:host="open" />
-           <action android:name="android.intent.action.VIEW" />
-           <category android:name="android.intent.category.DEFAULT" />
-           <category android:name="android.intent.category.BROWSABLE" />
-        </intent-filter>
+    <intent-filter>
+       <data android:scheme="excellencejobs" android:host="open" />
+       <action android:name="android.intent.action.VIEW" />
+       <category android:name="android.intent.category.DEFAULT" />
+       <category android:name="android.intent.category.BROWSABLE" />
+    </intent-filter>
+    <intent-filter android:autoVerify="true">
+      <action android:name="android.intent.action.VIEW" />
+      <category android:name="android.intent.category.DEFAULT" />
+      <category android:name="android.intent.category.BROWSABLE" />
+      <data android:scheme="https" android:host="x6vm.app.link" />
+      <data android:scheme="https" android:host="x6vm-alternate.app.link" />
+      <data android:scheme="https" android:host="x6vm.test-app.link" />
+      <data android:scheme="https" android:host="x6vm-alternate.test-app.link" />
+    </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
       <meta-data android:name="io.branch.sdk.BranchKey" android:value="key_live_govrZ3vSnGFLZI2jCC0SlcfcEwdWvD3t" />
+      <meta-data android:name="io.branch.sdk.BranchKey.test" android:value="key_test_onqs66FOdPDG9IZdzEWJAkdmyEh3tqZH" />
+      <meta-data android:name="io.branch.sdk.TestMode" android:value="false" />
       <receiver android:name="io.branch.referral.InstallListener" android:exported="true">
         <intent-filter>
           <action android:name="com.android.vending.INSTALL_REFERRER" />
