--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-device-info": "^0.10.2",
     "react-native-fcm": "^7.3.0",
     "react-native-maps": "^0.15.3",
+    "react-native-rating-requestor": "^2.0.0",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2",
