--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -161,21 +161,22 @@ dependencies {
      compile (project(':react-native-device-info')){
          exclude group: "com.google.android.gms"
      }
-     compile ("com.google.android.gms:play-services-base:10.0.1") {
+     compile ("com.google.android.gms:play-services-base:11.2.2") {
       force = true;
       }
-      compile ("com.google.android.gms:play-services-maps:10.0.1") {
+      compile ("com.google.android.gms:play-services-maps:11.2.2") {
       force = true;
       }
-      compile ("com.google.android.gms:play-services-gcm:10.0.1") {
+      compile ("com.google.android.gms:play-services-gcm:11.2.2") {
          force = true;
      }
-     compile ('com.google.firebase:firebase-core:10.0.1') {
+     compile ('com.google.firebase:firebase-core:11.2.2') {
         force = true;
     }
-    compile ('com.google.firebase:firebase-messaging:10.0.1') {
+    compile ('com.google.firebase:firebase-messaging:11.2.2') {
         force = true;
     }
+    compile 'com.google.firebase:firebase-perf:11.2.2'
 }
 
 // Run this once to be able to run the application with BUCK
@@ -186,6 +187,7 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'io.fabric'
+apply plugin: 'com.google.firebase.firebase-perf'
 
 repositories {
   maven { url 'https://maven.fabric.io/public' }
