--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:2.2.3'
 	       classpath 'com.google.gms:google-services:3.1.0'
          classpath 'io.fabric.tools:gradle:1.+'
+         classpath 'com.google.firebase:firebase-plugins:1.1.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -22,5 +23,6 @@ allprojects {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
+        maven { url "https://maven.google.com" }
     }
 }
