--- a/ios/HrRecruit/Info.plist
+++ b/ios/HrRecruit/Info.plist
@@ -2,6 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Fabric</key>
+<dict>
+	<key>APIKey</key>
+	<string>dda13f7a8cbd6a4448d85a1ca9e907d678b32963</string>
+	<key>Kits</key>
+	<array>
+		<dict>
+			<key>KitInfo</key>
+			<dict/>
+			<key>KitName</key>
+			<string>Crashlytics</string>
+		</dict>
+	</array>
+</dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
