--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -60,10 +60,10 @@
       <action android:name="android.intent.action.VIEW" />
       <category android:name="android.intent.category.DEFAULT" />
       <category android:name="android.intent.category.BROWSABLE" />
-      <data android:scheme="https" android:host="x6vm.app.link" />
-      <data android:scheme="https" android:host="x6vm-alternate.app.link" />
-      <data android:scheme="https" android:host="x6vm.test-app.link" />
-      <data android:scheme="https" android:host="x6vm-alternate.test-app.link" />
+      <data android:scheme="https" android:host="etech.app.link" />
+      <data android:scheme="https" android:host="etech-alternate.app.link" />
+      <data android:scheme="https" android:host="etech.test-app.link" />
+      <data android:scheme="https" android:host="etech-alternate.test-app.link" />
     </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
