--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "native-base": "^2.3.0",
     "react": "^16.0.0-alpha.12",
     "react-native": "^0.46.4",
+    "react-native-app-intro": "^1.1.5",
     "react-native-branch": "^2.0.0-rc.2",
     "react-native-device-info": "^0.10.2",
     "react-native-fcm": "^7.3.0",
