--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "axios": "^0.16.2",
     "eslint": "^4.3.0",
     "immutability-helper": "^2.3.0",
-    "native-base": "^2.3.0",
+    "native-base": "^2.3.2",
     "react": "^16.0.0-alpha.12",
     "react-native": "^0.46.4",
     "react-native-app-intro": "^1.1.5",
@@ -19,6 +19,7 @@
     "react-native-fcm": "^7.3.0",
     "react-native-maps": "^0.15.3",
     "react-native-rating-requestor": "^2.0.0",
+    "react-native-swiper": "^1.5.12",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2",
